--- a/views/_reservation_activity_multiple_dates.erb
+++ b/views/_reservation_activity_multiple_dates.erb
@@ -5,8 +5,11 @@
   </style>
   <% if @activity.lives? %>
     <h3><%=t.activity.reservation%></h3>
-    <form name="select_date_form" id="select_date_form" action="/p/activity/select-date"
+    <form name="select_date_form" id="select_date_form" <%if request.path.starts_with?('/admin')%>action="/admin/order/new-order-item-select-date"<%else%>action="/p/activity/select-date"<%end%>
             method="post">
+      <% if request.path.starts_with?('/admin') %>
+        <input type="hidden" name="order_id" id="order_id" value="<%=@order.id%>"/>
+      <% end %> 
       <input type="hidden" name="activity_id" id="activity_id" value="<%=@activity.id%>"/>
       <h4><%=t.activity.dates%></h4>
       <select name="activity_date_id" id="activity_date_select" style="width:99%">
@@ -18,11 +21,18 @@
     </form> 
     <% if @activity.capacity > @occupation[:total_occupation].to_i %>
       <% if defined?@activity_date and !@activity_date.nil? %>
-        <form name="activity_form" id="activity_form" action="/p/activity/add-to-shopping-cart" method="post">
+        <form name="activity_form" id="activity_form" <%if request.path.starts_with?('/admin')%>action="/admin/order/new-order-item-add-activity"<%else%>action="/p/activity/add-to-shopping-cart"<%end%> method="post">
+          <% if request.path.starts_with?('/admin') %>
+            <input type="hidden" name="order_id" id="order_id" value="<%=@order.id%>"/>
+          <% end %>           
           <input type="hidden" name="activity_id" id="activity_id" value="<%=@activity.id%>"/>
           <input type="hidden" name="activity_date_id" id="activity_date_id" value="<%=@activity_date.id%>"/>
           <% if @activity.mode == :partial %>
-            <%= partial :reservation_activity_tickets %>
+              <%if request.path.starts_with?('/admin')%> 
+                <%= partial :reservation_activity_tickets_order %>
+              <% else %>
+                <%= partial :reservation_activity_tickets %>
+              <% end %>
           <% end %>
           <div id="total" class="centered_text more_contrast_text" style="font-size:3em"></div> 
           <div id="botonera" class="top-margin">
