--- a/views/booking_activities_management.erb
+++ b/views/booking_activities_management.erb
@@ -33,11 +33,11 @@
 <script type="text/tmpl" id="elements_list_template">
   <div class="entity-block-container">
     <div class="entity-block-container-inside all-space">
-      <div style="height:108px">
+      <div style="max-height:108px">
         <%% if (entity && entity.photo_url_small != null && entity.photo_url_small.length > 0)  { %> 
         <img src="<%%= entity.photo_url_small %>" class="box-shadow element-row-selector" style="display:block; margin: 0 auto" rel="<%%= index %>"/>
         <%% } else { %>
-        <div class="box-shadow element-row-selector" style="width:144px; height: 108px" rel="<%%= index %>">
+        <div class="box-shadow element-row-selector" style="max-width:144px; max-height: 108px" rel="<%%= index %>">
           <span class="centered_text" style="font-size:5em; display: block" data-icon="&#xe072;"></span> 
         </div> 
         <%% } %>
@@ -124,7 +124,11 @@
               <div class="formrow">
                 <label class="fieldtitle"><%= t.booking_category_management.form.web_public.label%></label>
                 <input type="checkbox" name="web_public" value="true" id="web_public" <%% if (entity && entity.web_public) { %>checked="checked"<%%}%>/>
-              </div>                                  
+              </div>               
+              <div class="formrow">
+                <label class="fieldtitle"><%= t.booking_category_management.form.notify_customer_if_empty.label%></label>
+                <input type="checkbox" name="notify_customer_if_empty" value="true" id="notify_customer_if_empty" <%% if (entity && entity.notify_customer_if_empty) { %>checked="checked"<%%}%>/>
+              </div>                                   
               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                 <div class="navigation-bar-crud-buttons">
                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
