--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -165,6 +165,7 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
       $('.booking_item_reference').bind('change', function() {
         self.updateLineResource($(this)[0]);
       });
+
       $('#new_charge').bind('click', function(){
         $('#new_charge_button').unbind('click');
         $('#date').datetimepicker(
@@ -205,6 +206,77 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
 
       $('#new_booking_extra_button').bind('click', function() {
         self.prepareFormNewBookingExtra(entity);
+      });
+
+      $('.remove-booking-extra-id').bind('click', function() {
+        var bookingExtraId = $(this).attr('data-id');
+        $("<div title='" + '<%=t.booking_management.form.extra_removed.confirm_delete_title%>' + "'>" +
+                           '<%=t.booking_management.form.extra_removed.confirm_delete_message%>' + "</div>").dialog( 
+          { height: 250, modal: true,        
+            buttons: {
+                Ok: function() {
+                      response = true;
+                      $(this).dialog( "close" );
+                },
+                Cancel: function() {
+                      response = false;  
+                      $( this ).dialog( "close" );
+                }
+          },
+          close : function(event, ui) {                   
+            if (response) {
+              $.ajax({
+                type: 'DELETE',
+                url : '/api/booking/booking-extra?id='+bookingExtraId,
+                success: function(data, textStatus, jqXHR) {
+                  bookingManager.model.synchronizeCurrentEntity(data);
+                  bookingManager.model.change_state('entity_updated_successfully');
+                  alert('<%=t.booking_management.form.extra_removed.done%>');
+                  $('form[name="charge"]').hide();
+                },
+                error: function(data, textStatus, jqXHR) {
+                  alert('<%=t.booking_management.form.extra_removed.error%>');
+                }
+              }); 
+            }
+          }
+        }); 
+      });
+
+      $('.remove-booking-charges').bind('click', function() {
+        var bookingId = $(this).attr('data-booking-id');
+        var chargeId = $(this).attr('data-charge-id');
+        $("<div title='" + '<%=t.booking_management.form.charge_removed.confirm_delete_title%>' + "'>" +
+                           '<%=t.booking_management.form.charge_removed.confirm_delete_message%>' + "</div>").dialog( 
+          { height: 250, modal: true,        
+            buttons: {
+                Ok: function() {
+                      response = true;
+                      $(this).dialog( "close" );
+                },
+                Cancel: function() {
+                      response = false;  
+                      $( this ).dialog( "close" );
+                }
+          },
+          close : function(event, ui) {                   
+            if (response) {
+              $.ajax({
+                type: 'DELETE',
+                url : '/api/booking/booking-charge?booking_id='+bookingId+'&charge_id='+chargeId,
+                success: function(data, textStatus, jqXHR) {
+                  bookingManager.model.synchronizeCurrentEntity(data);
+                  bookingManager.model.change_state('entity_updated_successfully');
+                  alert('<%=t.booking_management.form.charge_removed.done%>');
+                  $('form[name="charge"]').hide();
+                },
+                error: function(data, textStatus, jqXHR) {
+                  alert('<%=t.booking_management.form.charge_removed.error%>');
+                }
+              }); 
+            }
+          }
+        }); 
       });
 
       $('#booking_supplements_button').bind('click', function() {
